# gamedock

./: Cargo.toml  README.md  prompt.md
.github/workflows/: ci.yml
crates/gamedock-backup/: Cargo.toml
crates/gamedock-backup/src/: backup.rs  lib.rs  manager.rs  restore.rs
crates/gamedock-cli/: Cargo.toml
crates/gamedock-cli/src/: cli.rs  main.rs
crates/gamedock-cli/src/commands/: backup.rs  completions.rs  controller.rs  install.rs  launch.rs  library.rs  mod.rs  optimize.rs  runtime.rs  system.rs
crates/gamedock-controller/: Cargo.toml
crates/gamedock-controller/src/: controller.rs  lib.rs  mapping.rs  profiles.rs
crates/gamedock-core/: Cargo.toml
crates/gamedock-core/src/: app.rs  config.rs  error.rs  events.rs  lib.rs  package.rs  paths.rs  runtime.rs
crates/gamedock-game-library/: Cargo.toml
crates/gamedock-game-library/src/: lib.rs  library.rs  metadata.rs  search.rs
crates/gamedock-gui/: Cargo.toml
crates/gamedock-gui/src/: app.rs  main.rs  state.rs
crates/gamedock-installer/: Cargo.toml
crates/gamedock-installer/src/: apk.rs  apkm.rs  apks.rs  download.rs  installer.rs  lib.rs  xapk.rs
crates/gamedock-launcher/: Cargo.toml
crates/gamedock-launcher/src/: launcher.rs  lib.rs  play_store.rs
crates/gamedock-linux-integration/: Cargo.toml
crates/gamedock-linux-integration/src/: desktop.rs  desktop_entry.rs  icons.rs  lib.rs
crates/gamedock-optimizer/: Cargo.toml
crates/gamedock-optimizer/src/: gamemode.rs  lib.rs  mangohud.rs  optimizer.rs  system.rs
crates/gamedock-plugin-sdk/: Cargo.toml
crates/gamedock-plugin-sdk/src/: lib.rs  loader.rs  registry.rs  traits.rs
crates/gamedock-runtime-manager/: Cargo.toml
crates/gamedock-runtime-manager/src/: lib.rs  manager.rs  waydroid.rs
packaging/arch/: PKGBUILD  gamedock.desktop
packaging/debian/: cargo-deb.toml  control
packaging/flatpak/: io.github.gamedock.metainfo.xml  io.github.gamedock.yml
