[package]
name = "gamedock-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI frontend for GameDock"

[[bin]]
name = "gamedock"
path = "src/main.rs"

[dependencies]
gamedock-core = { workspace = true }
gamedock-runtime-manager = { workspace = true }
gamedock-plugin-sdk = { workspace = true }
gamedock-installer = { workspace = true }
gamedock-game-library = { workspace = true }
gamedock-launcher = { workspace = true }
gamedock-linux-integration = { workspace = true }
gamedock-controller = { workspace = true }
gamedock-optimizer = { workspace = true }
gamedock-backup = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
