[package]
name = "gamedock-controller"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Controller support and mapping for GameDock"

[dependencies]
gamedock-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
