[package]
name = "gamedock-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types, configuration, and utilities for GameDock"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true }
url = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }
tempfile = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }
