[package]
name = "gamedock-launcher"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "One-click launcher with auto runtime startup for GameDock"

[dependencies]
gamedock-core = { workspace = true }
gamedock-runtime-manager = { workspace = true }
gamedock-game-library = { workspace = true }
gamedock-optimizer = { workspace = true }
gamedock-plugin-sdk = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
