[package]
name = "gamedock-linux-integration"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Linux desktop integration for GameDock"

[dependencies]
gamedock-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
flate2 = { workspace = true }
