[package]
name = "gamedock-optimizer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GameMode, MangoHUD, and system optimization for GameDock"

[dependencies]
gamedock-core = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
which = "7"
