[package]
name = "gamedock-plugin-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Plugin SDK for GameDock runtime extensions"

[dependencies]
gamedock-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
libloading = { workspace = true }
tracing = { workspace = true }
