[package]
name = "gamedock-runtime-manager"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Runtime manager with Waydroid backend for GameDock"

[dependencies]
gamedock-core = { workspace = true }
gamedock-plugin-sdk = { workspace = true }
async-trait = { workspace = true }
dirs = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
which = "7"
